--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,162 +1,292 @@
 <%- include('partials/Navbar.ejs',{authenticated:authenticated}) %>
-
-
-
-<link rel="stylesheet" href="css/style.css">
-<style>
-    .profile{
-        max-width:98vw;
-        min-height: 100vh;
-        display: flex;
-        justify-content: center;
-    }
-    .profile .wrapper{
-            margin:100px 0;
-            width:900px;
-            max-width: 98vw;
-            background-color:#f3f4f6;
-            border-radius:10px;
-            min-height:700px;
-            border:1px solid #dee2e6;
-    }
-    .profile .banner{
-        width:100%;
-        height:150px;
-        background-color:#6f6f93;
-        border-radius:10px 10px 0 0;
-
-    }
-    .profile .pprofileContainer{
-        display:flex;
-        position:relative;
-        top:-40px;
-        flex-wrap: wrap;
-      
-    }
-    .profile .img{
-        width:150px;
-        height:150px;
-        overflow:hidden;
-        border-radius:50%;
-        box-shadow: 0 0 0 5px white;
-    }
-    .profile .img img{
-        width: 150px;
-        height: 150px;
-        object-fit: cover;
-    }
-    .profile .content{
-        display:flex;
-       justify-content:end;
-        flex-direction: column;
-        padding-bottom: 20px;
-    }
-    .profile .light{
-        padding:0 !important;
-        margin:0 !important;
-      color:rgb(117, 115, 115);
-    }
-    .profile .date{
-        color:#6f6f93;
-    }
-    .profile ul{
-        list-style: none;
-    }
-    .profile .blogs{
-        border:1px solid #dee2e6;
-        background-color:white;
-        display: flex;
-        flex-direction: column;
-       align-items: center;
-    }
-    .profile .activity button{
-        border-radius: 5px 5px 0 0;
-        border:1px solid #dee2e6 !important;
-    }
-    .profile  .blogContainer {
-        padding-top: 40px;
-        background-color: #f3f4f6;
-        width: 700px;
-        max-width: 100vw;
-        border-radius: 10px;
-      
-
-    }
-    .profile .logoutBtn{
-        position: absolute;
-        top:40px;
-        right:0;
-       
-    }
-    .mainProfileImg{
-        min-width: 150px;
-    }
-    @media screen and (max-width: 550px) {
-           .profile .mainProfileImg{
-              margin:0 auto;
-           }
-           .profile .content{
-               width: 100vw;
-              
-               text-align: center;
-           }
-           .profile .logoutBtn{
-               position: static;
-
-           }
-        }
-    
-</style>
 <% var date = user.createdAt;
 var month = ["January", "February", "March", "April", "May", "June",
 "July", "August", "September", "October", "November", "December"][date.getMonth()]
 var year = date.getFullYear();
 var Date= date.getDate();
-date= `${Date}th ${month} ${year}`;
+date= `${Date} ${month} ${year}`;
 console.log(date);
 %>
-   
-<div class="profile">
-    <div class="wrapper mx-3">
-        <div class="banner">
 
-        </div>
-        <div class="pprofileContainer mx-5">
-            <div class="img mainProfileImg">
-                <img src="<%= user.image %>" alt="<%= user.fullName %>" referrerpolicy="no-referrer">
-            </div>
-            <div class="content mx-3">
-                <h5 class="heading ">Neha Deekonda</h5>
-                <p class="light">Joined on</p>
-                <p class="light date"><%= date %></p>
-                <a href="">
-                    <button class="px-3 py-2 main-Btn logoutBtn">Logout</button>
-                </a>
-            </div>
-           
-            
-           
 
-        </div>
-        <!-- /auth/logout -->
-        
-        <div class="activity">
-            <button class=" secondary-Btn px-2 py-2">
-                Activity
-            </button>
-            <div class="blogs">
-             <% blogs.forEach((blog)=>{ 
-                blog.author=user %>
-                <div class="eachBlog p-1">
-                    <%- include('partials/Blog.ejs',{blog:blog,user:blog.author._id}) %>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <style>
+        .profile {
+            max-width: 98vw;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+        }
+
+        .profile .wrapper {
+            margin: 100px 0;
+            width: 900px;
+            max-width: 98vw;
+            background-color: #f3f4f6;
+            border-radius: 10px;
+            min-height: 700px;
+            border: 1px solid #dee2e6;
+        }
+
+        .profile .banner {
+            width: 100%;
+            height: 150px;
+            background-color: #6f6f93;
+            border-radius: 10px 10px 0 0;
+
+        }
+
+        .profile .pprofileContainer {
+            display: flex;
+            position: relative;
+            top: -40px;
+            flex-wrap: wrap;
+
+        }
+
+        .profile .img {
+            width: 150px;
+            height: 150px;
+            overflow: hidden;
+            border-radius: 50%;
+            box-shadow: 0 0 0 5px white;
+        }
+
+        .profile .img img {
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+        }
+
+        .profile .content {
+            display: flex;
+            justify-content: end;
+            flex-direction: column;
+            padding-bottom: 20px;
+        }
+
+        .profile .light {
+            padding: 0 !important;
+            margin: 0 !important;
+            color: rgb(117, 115, 115);
+        }
+
+        .profile .date {
+            color: #6f6f93;
+        }
+
+        .profile ul {
+            list-style: none;
+        }
+
+        .profile .blogs {
+            border: 1px solid #dee2e6;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .profile .tabs .tabBtn {
+            border-radius: 5px 5px 0 0;
+            border: 1px solid #dee2e6 !important;
+        }
+
+        .profile .blogContainer {
+            padding-top: 40px;
+            background-color: #f3f4f6;
+            width: 700px;
+            max-width: 100vw;
+            border-radius: 10px;
+
+
+        }
+
+        .profile .logoutBtn {
+            position: absolute;
+            top: 40px;
+            right: 0;
+
+        }
+
+        .mainProfileImg {
+            min-width: 150px;
+        }
+
+        #editTab {
+            display: none;
+        }
+
+        .form-control:focus {
+            box-shadow: none !important;
+            border: 1px solid #6f6f93;
+        }
+
+        .profile .bio {
+            background-color: white;
+            border: 1px solid #dee2e6 !important;
+            border-radius: 10px;
+        }
+        .profile .noBlogs{
+            width: 100%;
+            height: 300px;
+            display:flex;
+            align-items: center;
+            justify-content: center;
+        }
+        @media screen and (max-width: 550px) {
+            .profile .mainProfileImg {
+                margin: 0 auto;
+            }
+
+            .profile .content {
+                width: 100vw;
+
+                text-align: center;
+            }
+
+            .profile .logoutBtn {
+                position: static;
+
+            }
+        }
+    </style>
+
+
+    <div class="profile">
+        <div class="wrapper mx-3">
+            <div class="banner">
+
+            </div>
+            <div class="pprofileContainer mx-5">
+                <div class="img mainProfileImg">
+                    <img src="<%= user.image %>" alt="<%= user.fullName %>" referrerpolicy="no-referrer">
+                </div>
+                <div class="content mx-3">
+                    <h5 class="heading ">Neha Deekonda</h5>
+                    <p class="light">Joined on</p>
+                    <p class="light date">
+                        <%= date %>
+                    </p>
+                    <a href="">
+                        <button class="px-3 py-2 main-Btn logoutBtn">Logout</button>
+                    </a>
+                </div>
+            </div>
+            <% if(user.About!="" ){ %>
+                <div class="bio mx-5 my-3 p-3">
+                    <div>
+                        <b class="heading">About:</b>
+                        <p class="light">
+                            <%= user.About %>
+                        </p>
                     </div>
-               
-               
-            <% }) %>
-            </div>
+
+                </div>
+                <% } %>
+                    <div class="socialWrapper d-flex w-100">
+                       
+                        <div class="bio social mx-5 my-3 p-3  mb-2 w-100">
+                           <div class="title">
+                               <b class="heading m-1">Contact me:</b>
+                           </div>
+                            <% if(user.linkedinLink!="" ){ %>
+                            <div class="m-1">
+                                <a href="<%= user.linkedinLink %>" target="_blank">
+                                    <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
+                                        height="35px">
+                                </a>
+    
+                            </div>
+                            <% } %>
+                            <% if(user.githubLink!="" ){ %>
+                            <div class="m-1">
+                                <a href="<%= user.githubLink %>" target="_blank">
+                                    <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
+                                        height="35px">
+                                </a>
+    
+                            </div>
+                            <% } %>
+                            <% if(user.discordId!=""){ %>
+                            <div class="m-1">
+                                <a href="https://discord.com/users/<%= user.discordId %>" target="_blank">
+                                    <img src="https://img.shields.io/badge/Discord-5865F2?style=for-the-badge&logo=discord&logoColor=white"
+                                        height="35px">
+                                </a>
+    
+                            </div>
+                            <% } %>
+                        </div>
+                    </div>
+                   
+                    <div class="tabs">
+                        <button class=" secondary-Btn px-2 py-2 tabBtn" id="activity">
+                            Activity
+                        </button>
+                        <button class=" secondary-Btn px-2 py-2 tabBtn" id="edit">
+                            Edit Profile
+                        </button>
+                        <div class="blogs" id="blogsTab">
+                            <% if(blogs.length==0){ %>
+                                <div class="noBlogs">
+                                   <p class="light">No Blogs to show</p> 
+                                </div>
+                              
+                            <%}%>
+                            <% blogs.forEach((blog)=>{
+                                blog.author=user %>
+                                <div class="eachBlog p-1">
+                                    <%- include('partials/Blog.ejs',{blog:blog,user:blog.author._id}) %>
+                                </div>
+                                <% }) %>
+                        </div>
+                        <div class="edit p-1" id="editTab">
+                            <form action="/user/edit/<%= user._id %>" method="post" class="mx-1">
+                                <div class="form-group my-3">
+                                    <label for="about"><b class="heading">About</b></label>
+                                    <input type="text" id="about" class="form-control" name="About"
+                                        value="<%= user.About %>">
+                                </div>
+                                <div class="form-group my-3">
+                                    <label for="githubLink"><b class="heading">Github Link</b></label>
+                                    <input type="text" id="githubLink" class="form-control" name="githubLink"
+                                        value="<%= user.githubLink %>">
+                                </div>
+                                <div class="form-group my-3">
+                                    <label for="linkedinLink"><b class="heading">Linkedin Link</b></label>
+                                    <input type="text" id="linkedinLink" class="form-control" name="linkedinLink" value="<%= user.linkedinLink
+                    %>">
+                                </div>
+                                <div class="form-group my-3">
+                                    <label for="discordId"><b class="heading">Discord Id</b></label>
+                                    <input type="text" id="discordId" class="form-control" name="discordId"
+                                        value="<%= user.discordId %>">
+                                </div>
+
+                                <button type="submit" class="main-Btn px-3 py-2">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+
         </div>
     </div>
-</div>
 
+    <script>
+        const editBtn = document.getElementById("edit");
+        const activityBtn = document.getElementById("activity");
+        const blogsTab = document.getElementById("blogsTab");
+        const editTab = document.getElementById("editTab");
+        editBtn.addEventListener("click", () => {
+            editTab.style.display = "block";
+            blogsTab.style.display = "none";
 
-<!-- auth/logout -->
+        })
+        activityBtn.addEventListener("click", () => {
+            editTab.style.display = "none";
+            blogsTab.style.display = "block";
+
+        })
+
+    </script>
