--- a/views/Profile.ejs
+++ b/views/Profile.ejs
@@ -78,6 +78,11 @@
       
 
     }
+    .profile .bio {
+            background-color: white;
+            border: 1px solid #dee2e6 !important;
+            border-radius: 10px;
+        }
     
 </style>
 <% var date = user.createdAt;
@@ -85,7 +90,7 @@ var month = ["January", "February", "March", "April", "May", "June",
 "July", "August", "September", "October", "November", "December"][date.getMonth()]
 var year = date.getFullYear();
 var Date= date.getDate();
-date= `${Date}th ${month} ${year}`;
+date= `${Date} ${month} ${year}`;
 %>
    
 <div class="profile">
@@ -106,6 +111,52 @@ date= `${Date}th ${month} ${year}`;
            
 
         </div>
+        <% if(user.About!="" ){ %>
+            <div class="bio mx-5 my-3 p-3">
+                <div>
+                    <b class="heading">About:</b>
+                    <p class="light">
+                        <%= user.About %>
+                    </p>
+                </div>
+
+            </div>
+            <% } %>
+                <div class="socialWrapper d-flex w-100 mb-3">
+                   
+                    <div class="bio social mx-5 my-3 p-3  mb-2 w-100">
+                       <div class="title">
+                           <b class="heading m-1">Contact me:</b>
+                       </div>
+                        <% if(user.linkedinLink!="" ){ %>
+                        <div class="m-1">
+                            <a href="<%= user.linkedinLink %>" target="_blank">
+                                <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
+                                    height="35px">
+                            </a>
+
+                        </div>
+                        <% } %>
+                        <% if(user.githubLink!="" ){ %>
+                        <div class="m-1">
+                            <a href="<%= user.githubLink %>" target="_blank">
+                                <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
+                                    height="35px">
+                            </a>
+
+                        </div>
+                        <% } %>
+                        <% if(user.discordId!=""){ %>
+                        <div class="m-1">
+                            <a href="https://discord.com/users/<%= user.discordId %>" target="_blank">
+                                <img src="https://img.shields.io/badge/Discord-5865F2?style=for-the-badge&logo=discord&logoColor=white"
+                                    height="35px">
+                            </a>
+
+                        </div>
+                        <% } %>
+                    </div>
+                </div>
         <div class="activity">
             <button class=" secondary-Btn px-2 py-2">
                 Activity
