--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -27,7 +27,7 @@
     
                     <div class="pt-4 container d-flex justify-content-center">
                         <a href="/auth/google">
-                            <button class="btn btn-light">
+                            <button class="main-Btn px-3 py-2 secondary-Btn">
                                 <img width="20px" style=" margin-right:8px" alt="Google sign-in"
                                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
                                 Sign in with Google
