--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -32,7 +32,7 @@
                   <div class="form-group my-3 ">
                     <label for="editor"><b class="heading">Body</b></label>
                     <textarea  id="editor" rows="10" name="body" placeholder="Start typing here...
-                    (To upload images copy paste the image or drag and drop)" value="<%- blog.body %>"></textarea>
+                    (To upload images copy paste the image or drag and drop)" ><%- blog.body %></textarea>
                   </div>
                   <button type="submit" class="main-Btn px-3 py-2">Submit</button>
             </form>
