--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -169,7 +169,7 @@ console.log(date);
                     <p class="light date">
                         <%= date %>
                     </p>
-                    <a href="">
+                    <a href="auth/logout">
                         <button class="px-3 py-2 main-Btn logoutBtn">Logout</button>
                     </a>
                 </div>
