--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -1,35 +1,41 @@
 <%- include('partials/Navbar.ejs',{authenticated:authenticated}) %>
     <style>
+        .home {
+            top: 0px;
+            bottom: 0px;
+        }
+
         .home .wrapper {
             width: 100vw;
             min-height: 100vh;
+            position: absolute;
+            top: 0px;
+            bottom: 0px;
+            display: flex;
         }
 
         .home .first {
-            width: 100vw;
-            height: 100vh;
+
             display: flex;
             align-items: center;
             justify-content: center;
-            flex-direction: column; 
-
+            flex-direction: column;
         }
 
-        /* .home .second{
-     width:50%;
-     height:100vh;
-     display:flex;
-     align-items: center;
-     justify-content: center;
-     padding:30px;
+        .home .second {
 
- }
- .home img{
-    max-width:100%;
-    max-height:100%;
-    object-fit: contain;
- } */
-        
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 30px;
+        }
+
+        .home img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+        }
+
 
         .main-heading {
             color: #da8181;
@@ -40,7 +46,16 @@
             display: flex;
             justify-content: center;
         }
-    
+        @media (max-width: 768px) {
+            .home .wrapper {
+                display:block;
+            }
+            .home .first{
+                width: 100%;
+                height: 100%;
+
+            }
+        }
     </style>
 
 
@@ -60,19 +75,19 @@
                                 <b>Read Blogs</b>
                             </button>
                         </a>
-                    <% }else{ %> 
-                    <a href="/signup">
-                        <button class="main-Btn secondary-Btn px-3 py-2">
-                            <b> Sign up</b>
-                        </button>
-                    </a>
-                    <% } %>
-                   
-               
+                        <% }else{ %>
+                            <a href="/signup">
+                                <button class="main-Btn secondary-Btn px-3 py-2">
+                                    <b> Sign up</b>
+                                </button>
+                            </a>
+                            <% } %>
+
+
                 </div>
             </div>
-            <!-- <div class="second">
+            <div class="second">
                 <img src="images/home.png" class="img-responsive" />
-            </div> -->
+            </div>
         </div>
     </div>
