--- a/views/partials/Navbar.ejs
+++ b/views/partials/Navbar.ejs
@@ -21,11 +21,12 @@
 .nav ul{
     padding-top:10px;
     display:flex;
+   
 }
 .nav li{
     display: block;
     margin: 0 20px;
-    font-size: large;
+    font-size: 20px;
 }
 .nav a{
   
@@ -35,19 +36,72 @@
 .nav a:hover{
        color:#3c3c4e
 }
+.nav i{
+    display:none;
+}
+@media screen and (max-width:500px){
+    
+    .nav h4{
+        padding:20px !important;
+    }
+    .nav .fa-bars{
+        display:block;
+        padding:15px;
+        font-size:25px;
+        cursor: pointer;
+    }
+   
+    .nav .right{
+        background-color: #6f6f93;
+        position:absolute;
+        top:0;
+        bottom:0;
+        right:0;
+        left:0;
+        margin:0 !important;
+    }
+    .fa-xmark{
+        display:block !important;
+        padding:15px;
+        font-size:25px;
+        position:absolute;
+        top:0px;
+        right: 5px;
+    }
+    .nav .right{
+        height:100vh;
+        width:100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        display:none;
+    }
+    .nav ul{
+        display:block !important;
+        padding:10px;
+        padding-bottom:100px !important;
+    }
+    .nav li{
+        padding:10px;
+    }
+}
 </style>
 
 <div class="nav">
+     
    <div class="navInner w-100">
        <div class="left mx-5">
            <a href="/">
             <h4 >Root</h4>
            </a>
-       
        </div>
-       <div class="right mx-3">
-          
+       <i class="fa-solid fa-bars" id="menu"></i>
+       <div class="right mx-3" id="right">
+        <i class="fa-solid fa-xmark" id="close"></i>
             <ul class="font-monospace">
+                <a href="/">
+                    <li>Home</li>
+                </a>
                 <a href="/blog/blogs">
                     <li>Blogs</li>
                 </a>
@@ -75,3 +129,19 @@
      
    </div>
 </div>
+
+<script>
+    const menu = document.getElementById('menu');
+    const right= document.getElementById('right');
+    const close= document.getElementById('close');
+    menu.addEventListener('click',()=>{
+      menu.style.display='none';
+      right.style.display='flex';
+     
+    })
+    close.addEventListener('click',()=>{
+        
+        right.style.display='none';
+        menu.style.display='block';
+    })
+</script>
