--- a/views/partials/Navbar.ejs
+++ b/views/partials/Navbar.ejs
@@ -36,7 +36,7 @@
 .nav a:hover{
        color:#3c3c4e
 }
-.nav i{
+.nav .fa-bars,.fa-xmark{
     display:none;
 }
 @media screen and (max-width:500px){
